# laradmin

./: .gitignore  CMakeLists.txt  README.md
archive/: move_laradmin_to_github.sh  updateFBR.sh
archive/build_tools/: cp-lar-tag-old
archive/cvmfs/: README
archive/refactor/: README  checkout_v05.sh  generate_util_hash.sh  refactor_larsoft.sh  update_cmake.sh  (+1 more)
build_tools/: CMakeLists.txt  README  bootstrap.sh  bootstrap_larsoft.sh  bootstrap_lbne.sh  bootstrap_uboone.sh  build-larsoft-products.sh  buildLArSoftOnly  buildMavericks.sh  buildMountainLion.sh  buildSLF.sh  build_larsoft.sh  build_lbne.sh  build_one.sh  build_one_jenkins.sh  build_uboone.sh  cp-lar-tag  cp-tag  larsoft-base-manifest.txt  make-release-notes  make-release-notes-old  tagBranch  tagLAr  tagLar  tar_larsoft_suite.sh  test_all.sh  test_one.sh
build_tools/helper/: doit.sh  git-push.sh  switch-branch.sh
cvmfs/: CMakeLists.txt  README  oasis-sync
gitwiki/: README  convert.pl  convert_source.pl  doit.sh  doit_source.sh  get_ifdh_art.sh
larsim_rename/: cleanup.sh
nightly/: CMakeLists.txt  README  build_nightly.sh  cleanold_nightly.sh  config_nightly.sh  copy_build.sh  doxylar  init_nightly.sh  nightly.sh  nightly_wrapper.sh  tag_nightly.sh  update_lar_doxygen.sh
refactor/: CMakeLists.txt  README  change_cmake.sh  checkout_v05.sh  fix_cmake.pl  fix_headers.pl  generate_hash.sh  generate_lib_list.sh  header_hash.pl  make_branch.sh  partial_cmake_fix.pl  partial_cmake_update.sh  refactor_larsoft.sh  remove_library_name.sh  update_sources.sh  update_version.sh
svnToGit/: AnalysisAlg.authors  AnalysisBase.authors  CalData.authors  ClusterFinder.authors  EventDisplay.authors  LArG4.authors  LArPandoraInterface.authors  MCCheater.authors  Monitoring.authors  OpticalDetector.authors  OpticalDetectorData.authors  RawData.authors  RecoBase.authors  RecoObjects.authors  Simulation.authors  TrackFinder.authors  Utilities.authors  VertexFinder.authors  conversion_notes  convert.sh  convert_author_list.sh  convert_lardata.sh  convert_larevt.sh  convert_larexamples.sh  convert_larobsolete.sh  convert_larreco.sh  convert_larsim.sh  convert_larsoft.sh  convert_lbnecode.sh  convert_uboonecode.sh  larsoft.authors  larsoft.git.author.list  setup.authors
ups/: CMakeLists.txt  bootstrap.sh  bootstrap_head.sh  laradmin.table.in
(+56 files in other folders)
